crates/permitlayer-core/src/audit/snapshots/permitlayer_core__audit__schema__tests__kill_activated_v2.snap
---
source: crates/permitlayer-core/src/audit/schema.rs
expression: kill_activated_canonical()
---
{
  "timestamp": "2026-04-11T18:54:48.832Z",
  "request_id": "01JQXK5V7R000000000000001",
  "agent_id": "system",
  "service": "permitlayer",
  "scope": "-",
  "resource": "kill-switch",
  "outcome": "ok",
  "event_type": "kill-activated",
  "schema_version": 2,
  "extra": {
    "activated_at": "2026-04-11T18:54:48.832Z",
    "cause": "user-initiated",
    "in_flight_cancelled": 0,
    "tokens_invalidated": 0,
    "was_already_active": false
  }
}
